--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,10 @@ DB_USER=postgres
 DB_PASSWORD=password
 DB_NAME=nest_db
 
-#
+# JWT
 JWT_KEY=
 EXP_ACCESS_TOKEN=10m
 EXP_REFRESH_TOKEN=7d
+
+# Redis
+REDIS_URL=redis://localhost:6379
